# django_tutorial

./: README.md  pyproject.toml
django_tutorial/: dotenv
django_tutorial/django_tutorial/: settings.py  urls.py
django_tutorial/polls/: admin.py  models.py  tests.py  urls.py  views.py
django_tutorial/polls/migrations/: 0001_initial.py
django_tutorial/polls/templates/polls/: base.html  detail.html  index.html  results.html
django_tutorial/templates/: 404.html
